--- a/package.json
+++ b/package.json
@@ -5,20 +5,35 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "lint": "eslint --ext .ts,.tsx . --max-warnings 0",
+    "tsc": "tsc",
+    "ci": "yarn lint && yarn tsc"
   },
   "dependencies": {
-    "expo": "~41.0.1",
+    "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
+    "expo": "^39.0.0",
+    "expo-asset": "~8.2.0",
+    "expo-constants": "~9.2.0",
+    "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-gesture-handler": "~1.7.0",
+    "react-native-reanimated": "~1.13.0",
+    "react-native-safe-area-context": "3.1.4",
+    "react-native-screens": "~2.10.1",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "eslint": "^7.25.0",
+    "eslint-config-react-native-wcandillon": "^3.6.1",
     "typescript": "~4.0.0"
   },
   "private": true
